--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,12 +2,13 @@ footer {
     font-family: 'Montserrat', sans-serif;
     font-style: italic;
     padding: 30px;
-  
+
+  a:link{
+    color: gray;
     
     
    
     
   }
-  a:link{
-    color:white;
+  
   }
