--- a/css/estilo.css
+++ b/css/estilo.css
@@ -208,25 +208,18 @@ nav ul li a {
   margin: 20px;
 }
 
-a:link {
+nav ul li a a:link {
   color: white;
 }
 
-nav ul li a:hover {
-  background: #474141;
-  font-family: arial;
-  color: black;
-  text-decoration: none;
-}
-
-li {
+nav ul li a a:link li {
   display: inline-block;
   font-style: normal;
   font-weight: lighter;
   color: aliceblue;
 }
 
-nav ul li a:hover {
+nav ul li a a:link li nav ul li a:hover {
   background: gray;
   list-style-type: none;
   font-style: normal;
@@ -244,39 +237,34 @@ nav ul li a:hover {
   width: 200px;
   height: 300px;
   margin: 10px 0;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.card:hover {
+.card .card:hover {
   border: solid 5px;
   width: 300px;
   height: 400px;
   -webkit-box-shadow: 10px 15px darkslategrey;
-  box-shadow: 10px 15px darkslategrey;
+          box-shadow: 10px 15px darkslategrey;
 }
 
-.card-img {
+.card .card:hover .card-img {
   height: 90%;
   width: 100%;
 }
 
-.card-medida {
+.card .card:hover .card-img .card-medida {
   width: 100%;
   height: 100%;
 }
 
-.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-}
-
-.tituloCard {
+.card .card:hover .card-img .card-medida .tituloCard {
   font-style: normal;
   font-weight: lighter;
   font-family: 'Montserrat', sans-serif;
@@ -292,8 +280,8 @@ footer {
   padding: 30px;
 }
 
-a:link {
-  color: white;
+footer a:link {
+  color: gray;
 }
 
 .formulario {
