--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,19 +1,18 @@
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   background-color: azure;
   height: 100vh;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
   font-style: italic;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 70px;
   color: white;
   font-weight: 900;
@@ -22,14 +21,14 @@ h1 {
 h2 {
   font-style: normal;
   font-weight: lighter;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 20px;
 }
 
 p {
   font-style: normal;
   font-weight: lighter;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-align: center;
   font-size: 20px;
   color: black;
@@ -38,7 +37,7 @@ p {
 h4, .asideNosotros {
   font-style: normal;
   font-weight: lighter;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 30px;
   text-align: center;
   color: black;
@@ -46,7 +45,7 @@ h4, .asideNosotros {
 
 /*titulo de index*/
 .tituloSection {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 40px;
   color: black;
   text-align: center;
@@ -59,19 +58,15 @@ h4, .asideNosotros {
 h3, h5 {
   font-style: normal;
   font-weight: lighter;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
   text-align: start;
 }
 
 /* iframe de index*/
 .iframe {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   margin: 40px;
 }
 
@@ -83,28 +78,20 @@ h3, h5 {
 }
 
 .card {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   border: solid 5px;
   width: 200px;
   height: 300px;
   margin: 10px 0;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card:hover {
   border: solid 5px;
   width: 300px;
   height: 400px;
-  -webkit-box-shadow: 10px 15px darkslategrey;
-          box-shadow: 10px 15px darkslategrey;
+  box-shadow: 10px 15px darkslategrey;
 }
 
 .card-img {
@@ -118,19 +105,15 @@ h3, h5 {
 }
 
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .tituloCard {
   font-style: normal;
   font-weight: lighter;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 80px;
   text-align: center;
   color: black;
@@ -140,7 +123,7 @@ h3, h5 {
 .slide-fwd-top p {
   font-style: normal;
   font-weight: lighter;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 20px;
   text-align: center;
   margin-top: 60px;
@@ -175,7 +158,7 @@ header, footer {
 }
 
 .tituloInspiracion {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 40px;
   color: black;
   text-align: center;
@@ -184,7 +167,7 @@ header, footer {
 }
 
 p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 20px;
   text-align: center;
 }
@@ -202,72 +185,57 @@ nav ul li a {
   list-style-type: none;
   font-style: normal;
   font-weight: lighter;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
   color: #dcdcdc;
   margin: 20px;
 }
-
 nav ul li a a:link {
   color: white;
 }
-
 nav ul li a a:link li {
   display: inline-block;
   font-style: normal;
   font-weight: lighter;
   color: aliceblue;
 }
-
 nav ul li a a:link li nav ul li a:hover {
   background: gray;
   list-style-type: none;
   font-style: normal;
   font-weight: lighter;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
   color: #dcdcdc;
 }
 
 .card {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   border: solid 5px;
   width: 200px;
   height: 300px;
   margin: 10px 0;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
-
 .card .card:hover {
   border: solid 5px;
   width: 300px;
   height: 400px;
-  -webkit-box-shadow: 10px 15px darkslategrey;
-          box-shadow: 10px 15px darkslategrey;
+  box-shadow: 10px 15px darkslategrey;
 }
-
 .card .card:hover .card-img {
   height: 90%;
   width: 100%;
 }
-
 .card .card:hover .card-img .card-medida {
   width: 100%;
   height: 100%;
 }
-
 .card .card:hover .card-img .card-medida .tituloCard {
   font-style: normal;
   font-weight: lighter;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 80px;
   text-align: center;
   color: black;
@@ -275,11 +243,10 @@ nav ul li a a:link li nav ul li a:hover {
 
 /*fin de card*/
 footer {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-style: italic;
   padding: 30px;
 }
-
 footer a:link {
   color: gray;
 }
@@ -321,7 +288,6 @@ footer a:link {
     transform: translateZ(160px) translateY(-100px);
   }
 }
-
 @keyframes slide-fwd-top {
   0% {
     -webkit-transform: translateZ(0) translateY(0);
@@ -332,4 +298,5 @@ footer a:link {
     transform: translateZ(160px) translateY(-100px);
   }
 }
+
 /*# sourceMappingURL=estilo.css.map */
