--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -178,10 +178,12 @@ h3, h5{
       text-align: center;
   }
   
- /*header*/
+ /*header y footer*/
  header,footer{
    background-color:black;
+   width: 100%;
    color: white;
+   
    
  }
  
@@ -213,3 +215,8 @@ h3, h5{
  aside{
    margin: 100px;
  }
+
+ 
+
+ 
+   
