--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,47 +1,13 @@
 
-    nav ul li a{
-      list-style-type: none;
-      font-style: normal;
-      font-weight: lighter;
-     font-family: 'Montserrat', sans-serif;
-      font-size: 15px;
-      color: #dcdcdc;
-      margin: 20px;
-
-      a:link{
-        color: white;
-        li{ 
-      
-          display:inline-block;
-          font-style: normal;
-          font-weight: lighter;
-          color: aliceblue;
-
- nav ul li a:hover {
-        background: gray;
-        list-style-type: none;
-        font-style: normal;
-        font-weight: lighter;
-        font-family: 'Montserrat', sans-serif;
-        font-size: 15px;
-        color: #dcdcdc;
-
-
-
-      }
-
-     
-      }
-     
-      }
-
     
-    }
+   
+header{
+  background-color: black;
+  width: 100%;
+}
     
     
-    
-    
-    
+  
     
     
     
