--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,12 +1,13 @@
-
+@import"variables";
 @import "generales";
 @import "menu"; 
 @import "card";
 @import "footer";
 @import "formulario";
 @import "animaciones";
-@import "secciones2";
 @import"media";
+@import "grid";
+@import "generales2"
 
 
 
