--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -10,25 +10,7 @@ body{
   font-family:'Montserrat', sans-serif;
   
 }
-h1{
-  font-style: italic;
-  font-family:'Montserrat', sans-serif;
-   font-size: 70px ;
-   color: white;
-   font-weight: 900;
-  
-   
-   
-}
 
-
-h2{
-  font-style: normal;
-  font-weight: lighter;
-  font-family:'Montserrat', sans-serif;
-  font-size: 20px;
-  
-}
 
 p{
 
@@ -67,23 +49,13 @@ h4,.asideNosotros{
 
 
   
-
-h3, h5{
-  font-style: normal;
-  font-weight: lighter;
-  font-family:'Montserrat', sans-serif;
-  font-size: 15px;
-  text-align:start;
-
-}
-
   
 
 /* iframe de index*/
 .iframe{
 
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   margin: 40px;
 
 }
@@ -132,6 +104,8 @@ h3, h5{
    display: flex;
    flex-wrap: wrap;
    justify-content:space-around;
+   margin: 30px;
+   
 }
 .tituloCard{
    font-style: normal;
@@ -159,7 +133,19 @@ h3, h5{
 }
 
 .articleNosotros{
-  margin: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+
+  
+  
+}
+.nosotros{
+
+  text-align: center ;
+  margin: 80px ;
+  
 }
 
 
@@ -170,29 +156,34 @@ h3, h5{
       position: relative;
       color: black;
       text-align: left;
-      margin: 200px
+      margin: 200px;
+      
+    
       
       
   }
   h4{
       text-align: center;
+      
   }
   
- /*header y footer*/
- header,footer{
-   background-color:black;
-   width: 100%;
-   color: white;
-   
-   
- }
+  h2{
+    font-style: normal;
+    font-weight: lighter;
+    font-family:'Montserrat', sans-serif;
+    font-size: 30px;
+    text-align:center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    
+  }
  
   
 
  
  .carrousel1, .carrousel2{
 
-  margin:100px ;
+  margin:50px ;
  }
 
  .tituloInspiracion{
@@ -200,8 +191,8 @@ h3, h5{
  font-size: 40px;
  color: black;
  text-align: center;
- margin-top: 100px;
- margin-bottom: 100px;
+ margin: 40px;
+ 
  
  }
  p{
@@ -219,4 +210,5 @@ h3, h5{
  
 
  
-   
+ 
+
