--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,11 +1,41 @@
 
     
    
-header{
-  background-color: black;
+header {
+  background-color: $color-menufooter;
   width: 100%;
+  display: flex;
+  justify-content: space-around;
+  padding: 30px;
+
+  h1 {
+    font-style: italic;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 70px;
+    color: white;
+    font-weight: 900;
+
+
+
+
+
+  }
+
+
+  .nav-link {
+
+    font-style: italic;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+
+  }
+
+
+
+
+
+
 }
-    
     
   
     
