--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -6,33 +6,58 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-around;
-  padding: 30px;
-
-  h1 {
-    font-style: italic;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 70px;
-    color: white;
-    font-weight: 900;
+  
 
 
 
-
-
+  .logoCaja{
+    width: 200px;
+    height: 200px;
+    .logo{
+      width: 100%;
+      height: auto;
+    }
   }
 
 
+
+
+
+   
+      
   .nav-link {
 
     font-style: italic;
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
+    margin: 10px;
+    color: white;
+    font-weight: 600;
 
+    
+    
+  }
+  nav li {
+
+    font-style: italic;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    box-shadow: 1opx color black;
+    
+    
   }
 
 
 
+  nav li:hover {
 
+    font-style: italic;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    box-shadow: 1px color black;
+    
+    
+  }
 
 
 }
@@ -42,6 +67,6 @@ header {
     
     
     
-   
+
     
     
