--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -5,9 +5,10 @@
 @import "footer";
 @import "formulario";
 @import "animaciones";
-@import"media";
 @import "grid";
-@import "generales2"
+@import "generales2";
+@import"media";
+
 
 
 
