--- a/css/generales2.css
+++ b/css/generales2.css
@@ -1,6 +1,6 @@
 /*mixins*/
 footer {
-  height: 150px;
+  height: 200px;
   width: 100%;
 }
 
@@ -11,10 +11,11 @@ h3, h4 {
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
   text-align: center;
-  color: white;
+  color: black;
 }
 
 h4 {
   font-size: 25px;
+  color: black;
 }
 /*# sourceMappingURL=generales2.css.map */
