--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -29,24 +29,18 @@ header {
 
     font-style: italic;
     font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     margin: 10px;
     color: white;
-    font-weight: 600;
+    font-weight: 300px;
 
     
     
   }
-  nav li {
-
-    font-style: italic;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    box-shadow: 1opx color black;
-    
-    
+  
+  .navbar-dark .navbar-nav .nav-link.active{
+    color: goldenrod;
   }
-
 
 
   nav li:hover {
